# discord_call_summarizer

./: .env.example  README.md  bot.py  discord_bot.py  pyproject.toml  requirements.txt  summariser.py  transcriber.py
bot/: audio_sink.py  main.py  summarization.py  transcription.py
